--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
         width: 50px; 
         height: 50px; 
         object-fit: contain;
+        border-radius: 8px; /* Zaokrąglone rogi dla obrazków */
     }
 
     .social-link .link-loading-bar {
@@ -324,7 +325,7 @@
                     <div class="link-loading-bar"></div>
                 </a>
                 <a href="https://kick.com/MokrySuchar" target="_blank" class="social-link">
-                    <img src="images/kick3.png" alt="Kick Logo">
+                    <img src="images/kick.png" alt="Kick Logo">
                     <div class="link-loading-bar"></div>
                 </a>
                 <a href="https://www.youtube.com/@MokrySucharLIVE" target="_blank" class="social-link">
