--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         width: 50px; 
         height: 50px; 
         object-fit: contain;
-        border-radius: 8px; /* Zaokrąglone rogi dla obrazków */
+        border-radius: 8px; 
     }
 
     .social-link .link-loading-bar {
@@ -259,18 +259,6 @@
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
     }
 
-    .link-image-container .link-button {
-        padding: 0;
-        display: block;
-    }
-
-    .link-image-banner {
-        width: 100%;
-        height: auto;
-        display: block;
-        transition: transform 0.3s ease-in-out;
-    }
-
     .link-image-container .link-button:hover .link-image-banner {
         transform: scale(1.05);
     }
@@ -288,7 +276,7 @@
     .footer-text {
         margin-top: 40px;
         font-size: 11px;
-        color: #fff; 
+        color: #aaa; /* Zmiana na szary kolor */
     }
 
     .age-restriction-image {
@@ -325,7 +313,7 @@
                     <div class="link-loading-bar"></div>
                 </a>
                 <a href="https://kick.com/MokrySuchar" target="_blank" class="social-link">
-                    <img src="images/kick.png" alt="Kick Logo">
+                    <img src="images/kick3.png" alt="Kick Logo">
                     <div class="link-loading-bar"></div>
                 </a>
                 <a href="https://www.youtube.com/@MokrySucharLIVE" target="_blank" class="social-link">
