--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
         height: 120px;
         border-radius: 50%;
         object-fit: cover;
-        box-shadow: 0 0 0 4px #191970, 0 0 20px 8px rgba(25, 25, 112, 0.7);
+        box-shadow: 0 0 0 4px #4169e1, 0 0 20px 8px rgba(65, 105, 225, 0.7);
         animation: glow-pulse 2.5s infinite;
     }
 
     @keyframes glow-pulse {
         0% {
-            box-shadow: 0 0 0 4px #191970, 0 0 20px 8px rgba(25, 25, 112, 0.5);
+            box-shadow: 0 0 0 4px rgba(65, 105, 225, 0.7), 0 0 20px 8px rgba(65, 105, 225, 0.5);
         }
         50% {
-            box-shadow: 0 0 0 4px #000080, 0 0 25px 12px rgba(0, 0, 128, 0.8);
+            box-shadow: 0 0 0 4px #4169e1, 0 0 25px 12px rgba(65, 105, 225, 0.8);
         }
         100% {
-            box-shadow: 0 0 0 4px #191970, 0 0 20px 8px rgba(25, 25, 112, 0.5);
+            box-shadow: 0 0 0 4px rgba(65, 105, 225, 0.7), 0 0 20px 8px rgba(65, 105, 225, 0.5);
         }
     }
 
@@ -276,7 +276,7 @@
     .footer-text {
         margin-top: 40px;
         font-size: 11px;
-        color: #aaa; /* Zmiana na szary kolor */
+        color: #aaa; 
     }
 
     .age-restriction-image {
