--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                 </div>
                 <div class="link-text">
                     <p class="link-title">CSGOSKINS - 2.10 I 10% WIĘCEJ DO DOŁADOWANIA</p>
-                </div>
+                <p class="link-subtitle">Kod: SUCHAR</p>
                 <div class="link-loading-bar"></div>
             </a>
             
