--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-top: 120px; 
+        /* Usunięto margines, aby nagłówek był wyżej */
     }
 
     .avatar-image {
@@ -59,6 +59,7 @@
         height: 120px;
         border-radius: 50%;
         object-fit: cover;
+        /* Zmieniono kolor cienia na taki jak podświetlenie kafelków */
         box-shadow: 0 0 0 4px #4169e1, 0 0 20px 8px rgba(65, 105, 225, 0.7);
         animation: glow-pulse 2.5s infinite;
     }
@@ -86,8 +87,7 @@
         font-size: 16px;
         font-weight: 400;
         margin-top: 5px;
-        margin-bottom: 20px;
-        color: #fff;
+        /* Usunięto margines dolny */
     }
 
     .contact-icon {
@@ -276,7 +276,7 @@
     .footer-text {
         margin-top: 40px;
         font-size: 11px;
-        color: #aaa; 
+        color: #aaa; /* Zmiana na szary kolor */
     }
 
     .age-restriction-image {
@@ -313,7 +313,7 @@
                     <div class="link-loading-bar"></div>
                 </a>
                 <a href="https://kick.com/MokrySuchar" target="_blank" class="social-link">
-                    <img src="images/kick3.png" alt="Kick Logo">
+                    <img src="images/kick.png" alt="Kick Logo">
                     <div class="link-loading-bar"></div>
                 </a>
                 <a href="https://www.youtube.com/@MokrySucharLIVE" target="_blank" class="social-link">
@@ -339,7 +339,7 @@
                 </div>
                 <div class="link-text">
                     <p class="link-title">CSGOSKINS - 2.10 I 10% WIĘCEJ DO DOŁADOWANIA</p>
-                <p class="link-subtitle">Kod: SUCHAR</p>
+                </div>
                 <div class="link-loading-bar"></div>
             </a>
             
