--- a/index.html
+++ b/index.html
@@ -335,10 +335,11 @@
             <a href="https://csgo-skins.com/?ref=Suchar" target="_blank" class="link-button">
                 <img src="images/tylko18x.png" alt="18+" class="age-restriction-image">
                 <div class="link-icon">
-                    <img src="images/csgoskins.png" alt="CSGOSKINS icon">
+                    <img src="images/fortuna3.png" alt="CS icon">
                 </div>
                 <div class="link-text">
                     <p class="link-title">CSGOSKINS - 2.10 I 10% WIĘCEJ DO DOŁADOWANIA</p>
+                    <p class="link-subtitle">Kod: SUCHAR</p>
                 </div>
                 <div class="link-loading-bar"></div>
             </a>
