--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
             <div class="content-cards-container">
                 <a href="https://www.youtube.com/watch?v=kFoS3yZ4D9c" target="_blank" class="content-card-link" id="youtubeLink">
                     <img src="https://i.ytimg.com/vi/kFoS3yZ4D9c/hqdefault.jpg" alt="Miniatura wideo 1" class="content-card-image" id="youtubeThumbnail">
-                    <p class="content-card-title" id="youtubeTitle">SUCHAR CZY ANTOSIE BEDĄ NA KICKU? REJS DOOKOŁA ŚWIATA Z DELORDEM, RELACJA PO ROZMOWIE Z KICKIEM</p>
+                    <p class="content-card-title" id="youtubeTitle"></p>
                 </a>
             </div>
         </section>
