--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
         <section id="latestContentSection" class="latest-content-section">
             <h2>Najnowszy filmik na youtube!</h2>
             <div class="content-cards-container">
-                <a href="https://www.youtube.com/watch?v=7RQtGOnI9uc" target="_blank" class="content-card-link" id="youtubeLink">
+                <a href="https://www.youtube.com/watch?v=kFoS3yZ4D9c" target="_blank" class="content-card-link" id="youtubeLink">
                     <img src="https://i.ytimg.com/vi/kFoS3yZ4D9c/hqdefault.jpg" alt="Miniatura wideo 1" class="content-card-image" id="youtubeThumbnail">
                 </a>
             </div>
