--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
         width: 100%;
         height: auto;
         display: block;
-        border-bottom: none; /* Usunięcie dolnej ramki */
+        border-bottom: none;
     }
 
     </style>
