--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                     <div class="link-loading-bar"></div>
                 </a>
                 <a href="https://kick.com/MokrySuchar" target="_blank" class="social-link">
-                    <img src="images/kick3.png" alt="Kick Logo">
+                    <img src="images/kick.png" alt="Kick Logo">
                     <div class="link-loading-bar"></div>
                 </a>
                 <a href="https://www.youtube.com/@MokrySucharLIVE" target="_blank" class="social-link">
