--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
                 </div>
                 <div class="link-text">
                     <p class="link-title">DONATE!</p>
-                    <p class="link-subtitle"></p>
+                    <p class="link-subtitle">Dotacje nie podlegają zwrotom!</p>
                 </div>
                 <div class="link-loading-bar"></div>
             </a>
