--- a/index.html
+++ b/index.html
@@ -393,6 +393,11 @@
         opacity: 1;
         transform: translateY(0);
     }
+    
+    .bold-code {
+        font-weight: 700;
+        color: #fff;
+    }
     </style>
 </head>
 
@@ -445,7 +450,7 @@
                 <div class="link-text">
                     <p class="link-title">CSGOSKINS - 2.10 I 10% WIĘCEJ DO DOŁADOWANIA</p>
                     <p class="link-subtitle">
-                        Kod: SUCHAR 
+                        Kod: <span class="bold-code">SUCHAR</span> 
                         <span class="copy-icon" data-code="SUCHAR">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
                                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -465,7 +470,7 @@
                 <div class="link-text">
                     <p class="link-title">300 zł we freebetach na start! </p>
                     <p class="link-subtitle">
-                        Kod: SUCHAR 
+                        Kod: <span class="bold-code">SUCHAR</span> 
                         <span class="copy-icon" data-code="SUCHAR">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
                                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -491,7 +496,7 @@
                 <div class="link-text">
                     <p class="link-title">Zamów zestaw startowy Holy! 10% Taniej!</p>
                     <p class="link-subtitle">
-                        Kod: SUCHAR 
+                        Kod: <span class="bold-code">SUCHAR</span> 
                         <span class="copy-icon" data-code="SUCHAR">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
                                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
