--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
 
     <div class="max-w-xl mx-auto pt-16 pb-8 px-6 text-center">
         <div class="inline-block relative mb-6">
-            <img src="images/avatar.png" class="relative w-32 h-32 rounded-full border-4 border-green-500/30 shadow-2xl mx-auto" alt="LEQUT">
+            <img src="images/lequt.png" class="relative w-32 h-32 rounded-full border-4 border-green-500/30 shadow-2xl mx-auto" alt="LEQUT">
         </div>
         <h1 class="text-5xl font-black neon-text italic mb-2 tracking-tighter uppercase">LeQut</h1>
         <p class="text-green-500/60 font-black tracking-[0.5em] uppercase text-[10px]">Kontakt: lequ@stormmedia.gg</p>
