--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
 
         <div class="bento-item partner-green">
             <div class="partner-content">
-                <img src="images/fcoins.png" class="partner-logo" alt="FCOINS">
+                <img src="images/lequtcoins.png" class="partner-logo" alt="FCOINS">
                 <div class="flex-1">
                     <p class="font-black text-base uppercase italic leading-none text-green-500">FCOINS</p>
                     <p class="subtitle-white">Monety do gry FC 26 KOD: RYBSON 5% WIĘCEJ MONET</p>
@@ -522,7 +522,7 @@
 
         <div class="bento-item partner-green">
             <div class="partner-content">
-                <img src="images/miodmalina.png" class="partner-logo" alt="MIODMALINA">
+                <img src="images/lequtdieta.png" class="partner-logo" alt="MIODMALINA">
                 <div class="flex-1">
                     <p class="font-black text-base uppercase italic leading-none text-green-500">MIODMALINA</p>
                     <p class="subtitle-white">15% taniej | ZAWSZE DARMOWA DOSTAWA</p>
