--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
         </a>
 
         <a href="https://www.youtube.com/@LeQuLoL" target="_blank" class="bento-item border-youtube social-item">
-            <div class="icon-box-social"><img src="images/neonyoutube.png" class="w-14 h-14 opacity-90 object-contain" alt="YouTube">
+            <div class="icon-box-social"><img src="images/neonyt.png" class="w-14 h-14 opacity-90 object-contain" alt="YouTube">
             </div>
             <span class="social-label" style="color: #ff0000;">YOUTUBE</span>
         </a>
